--- a/test/Runtime/cpu/Makefile.test
+++ b/test/Runtime/cpu/Makefile.test
@@ -5,27 +5,17 @@ TESTBASEDIR         = $(TESTROOTDIR)/Base
 RUNTIMEDIR          = $(TESTROOTDIR)/Runtime
 TESTDIR             = $(RUNTIMEDIR)/cpu
 
-CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) -I$(TESTBASEDIR)/code_generation
-CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) -I$(TESTBASEDIR)/code_generation
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
 LDFLAGS_TEST        = $(LIB_GTEST)
 
 SRCS_TEST = \
 	$(TESTROOTDIR)/RuntimeParameters.cpp \
     $(TESTBASEDIR)/setInitialConditions.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_ic.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_ic.cpp \
     $(TESTBASEDIR)/errorEstBlank.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_dens.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_dens.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_ener.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_ener.cpp \
-    $(TESTBASEDIR)/computeLaplacianFusedKernels.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_fused.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_fused.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_analysis.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_analysis.cpp \
+    $(GENDIR)/computeLaplacianFusedKernels.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
     $(TESTDIR)/testRuntime.cpp \
     $(RUNTIMEDIR)/runRuntimeTests.cpp
