Need to debug Milhoja library build failures in GCE

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,9 +84,13 @@ test_gnu:
  script:
  ##-- Setup all environment variables
  - echo $PWD
- - export CI_BASE_PATH=$(dirname $HOME/$CI_PROJECT_DIR)
+ - export CI_BASE_PATH=/tmp/milhoja
+ - mkdir -p $CI_BASE_PATH
+# - export CI_BASE_PATH=$(dirname $HOME/$CI_PROJECT_DIR)
  - export MILHOJA_WORK_REPO=$CI_BASE_PATH/MilhojaTest
  - export MILHOJA_CODE_REPO=$CI_BASE_PATH/OrchestrationRuntime
+ - cd ..
+ - cp -R ./OrchestrationRuntime $MILHOJA_CODE_REPO
  - export MILHOJA_INSTALL_PATH=$CI_BASE_PATH
  - export CGKIT_PATH=$CI_BASE_PATH/cg-kit
  - export SEDOV_REGRESSION_TEST=$MILHOJA_CODE_REPO/tools/compare_sedov_results.py
