--- a/tools/milhoja_pypkg/tox.ini
+++ b/tools/milhoja_pypkg/tox.ini
@@ -46,7 +46,7 @@ deps =
     flake8
 commands =
     python setup.py check --strict --metadata
-    flake8 --per-file-ignores="src/milhoja/__init__.py:F401"
+    flake8
 
 [testenv:format]
 # This can alter files, so users should use with care and this should never be
