--- a/test/Runtime/cpu/Makefile.test
+++ b/test/Runtime/cpu/Makefile.test
@@ -15,7 +15,7 @@ SRCS_TEST = \
     $(TESTBASEDIR)/errorEstBlank.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy.cpp \
-    $(GENDIR)/computeLaplacianFusedKernels.cpp \
+    $(TESTBASEDIR)/computeLaplacianFusedKernels.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
     $(TESTDIR)/testRuntime.cpp \
     $(RUNTIMEDIR)/runRuntimeTests.cpp
