--- a/test/Runtime/gpu/Makefile.test
+++ b/test/Runtime/gpu/Makefile.test
@@ -5,32 +5,22 @@ TESTBASEDIR         = $(TESTROOTDIR)/Base
 RUNTIMEDIR          = $(TESTROOTDIR)/Runtime
 TESTDIR             = $(RUNTIMEDIR)/gpu
 
-CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) -I$(TESTBASEDIR)/code_generation
-CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST) -I$(TESTBASEDIR)/code_generation
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(TESTDIR) -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CXXFLAGS_GTEST)
 CUFLAGS_TEST        = -I$(TESTBASEDIR) -I$(RUNTIMEDIR) $(CUFLAGS_GTEST)
 LDFLAGS_TEST        = $(LIB_GTEST)
 
 SRCS_TEST = \
 	$(TESTROOTDIR)/RuntimeParameters.cpp \
     $(TESTBASEDIR)/setInitialConditions.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_ic.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_ic.cpp \
     $(TESTBASEDIR)/errorEstBlank.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_dens.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_dens.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianDensity_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_ener.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_ener.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianEnergy_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianFusedKernels.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_fused.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_fused.cpp \
-    $(TESTBASEDIR)/code_generation/Tile_cpu_tf_analysis.cpp \
-    $(TESTBASEDIR)/code_generation/cpu_tf_analysis.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
     $(TESTDIR)/cgkit.DataPacket_gpu_dens_stream.cpp \
     $(TESTDIR)/cgkit.DataPacket_gpu_ener_stream.cpp \
