--- a/test/Sedov/gpu/variant3/Makefile.test
+++ b/test/Sedov/gpu/variant3/Makefile.test
@@ -5,8 +5,8 @@ SEDOVDIR            = $(TESTROOTDIR)/Sedov
 SEDOVGPUDIR         = $(SEDOVDIR)/gpu
 TESTDIR             = $(SEDOVGPUDIR)/variant3
 
-CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(TESTDIR)
-CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(TESTDIR)
+CXXFLAGS_TEST_DEBUG = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(TESTDIR) -I$(SEDOVDIR)/cpu/code_generation
+CXXFLAGS_TEST_PROD  = -I$(TESTROOTDIR) -I$(SEDOVDIR) -I$(SEDOVGPUDIR) -I$(TESTDIR) -I$(SEDOVDIR)/cpu/code_generation
 CUFLAGS_TEST        = -I$(SEDOVDIR)
 LDFLAGS_TEST        =
 
@@ -20,7 +20,6 @@ SRCS_TEST = \
 	$(SEDOVDIR)/Eos_idealGammaDensIe.cpp \
     $(SEDOVDIR)/hy_computeFluxesHll.cpp \
     $(SEDOVDIR)/hy_updateSolutionHll.cpp \
-    $(SEDOVDIR)/Hydro_advanceSolutionHll_tile_cpu.cpp \
 	$(SEDOVGPUDIR)/hy_computeSoundSpeedHll_oacc_summit.cpp \
 	$(SEDOVGPUDIR)/hy_computeFluxesHll_X_oacc_summit.cpp \
 	$(SEDOVGPUDIR)/hy_computeFluxesHll_Y_oacc_summit.cpp \
@@ -30,7 +29,8 @@ SRCS_TEST = \
 	$(SEDOVDIR)/Io.cpp \
 	$(SEDOVDIR)/Io_computeIntegralQuantitiesByBlock_tile_cpu.cpp \
 	$(SEDOVDIR)/Driver_data.cpp \
-	$(TESTDIR)/cgkit.DataPacket_Hydro_gpu_3.cpp \
+	$(TESTDIR)/DataPacket_Hydro_gpu_3.cpp \
 	$(TESTDIR)/Hydro_advanceSolutionHll_packet_oacc_summit_3.cpp \
 	$(TESTDIR)/Driver_executeSimulation.cpp \
-	$(SEDOVDIR)/solve_sedov_with_runtime.cpp
+	$(SEDOVDIR)/solve_sedov_with_runtime.cpp \
+	$(SEDOVDIR)/cpu/code_generation/cpu_tf00_$(NDIM)D.cpp
