--- a/test/Runtime/gpu/Makefile.test
+++ b/test/Runtime/gpu/Makefile.test
@@ -22,10 +22,10 @@ SRCS_TEST = \
     $(TESTBASEDIR)/computeLaplacianEnergy_packet_oacc_summit.cpp \
     $(TESTBASEDIR)/computeLaplacianFusedKernels.cpp \
     $(TESTBASEDIR)/Analysis.cpp \
-    $(TESTDIR)/DataPacket_gpu_dens_stream.cpp \
-    $(TESTDIR)/DataPacket_gpu_ener_stream.cpp \
-    $(TESTDIR)/DataPacket_gpu_dens_ener_stream.cpp \
-    $(TESTDIR)/DataPacket_gpu_de_1_stream.cpp \
+    $(TESTDIR)/DataPacket_gpu_tf_dens.cpp \
+    $(TESTDIR)/DataPacket_gpu_tf_ener.cpp \
+    $(TESTDIR)/DataPacket_gpu_tf_fused_actions.cpp \
+    $(TESTDIR)/DataPacket_gpu_tf_fused_kernels.cpp \
     $(TESTDIR)/testRuntime.cpp \
     $(RUNTIMEDIR)/runRuntimeTests.cpp \
     $(TESTBASEDIR)/computeLaplacianFusedActions_packet_oacc_summit.cpp \
