--- a/tools/milhoja_pypkg/tox.ini
+++ b/tools/milhoja_pypkg/tox.ini
@@ -19,6 +19,7 @@ passenv =
     CGKIT_PATH
 setenv =
     COV_FILE = {env:COVERAGE_FILE:.coverage_milhoja}
+    DOC_ROOT = docs
 deps =
     --editable=file://{env:CGKIT_PATH}
     coverage: coverage
@@ -55,3 +56,27 @@ description = Clean-up code with black
 deps = black
 skip_install = true
 commands = black {toxinidir}
+
+[testenv:html]
+description = Generate Milhoja's HTML documentation
+deps =
+    --editable=file://{env:CGKIT_PATH}
+    sphinx
+    sphinxcontrib-bibtex
+    sphinx_rtd_theme
+commands = 
+    sphinx-build --version
+    sphinx-build -E -b html {env:DOC_ROOT}/source {env:DOC_ROOT}/build
+
+[testenv:pdf]
+description = Generate Milhoja's PDF documentation
+deps =
+    --editable=file://{env:CGKIT_PATH}
+    sphinx
+    sphinxcontrib-bibtex
+depends = html
+allowlist_externals = make
+commands = 
+    sphinx-build --version
+    sphinx-build -E -b latex {env:DOC_ROOT}/source {env:DOC_ROOT}/build
+    make -C {env:DOC_ROOT}/build
