--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ tools/milhoja_pypkg/.eggs
 tools/milhoja_pypkg/.coverage_milhoja
 tools/milhoja_pypkg/build
 tools/milhoja_pypkg/dist/
+tools/milhoja_pypkg/docs/build
 tools/milhoja_pypkg/src/milhoja.egg-info/
 tools/milhoja_pypkg/src/milhoja/__pycache__/
 tools/milhoja_pypkg/src/milhoja/tests/__pycache__/
