Work in progress
Among other things:
* Create various helper functions to prepare for orchestration using
  a GPU-only, rather than CPU-only, thread team configuration
* Remove unused arguments and variables from various calls

--- a/sites/gce/Makefile.site.gnu_mpich
+++ b/sites/gce/Makefile.site.gnu_mpich
@@ -21,7 +21,7 @@ CXXCOMPNAME  = gnu
 CXXCOMP      = mpicxx
 
 CXXFLAGS_PROD    = -O3
-CXXFLAGS_DEBUG   = -g3 -Og -DGRID_LOG
+CXXFLAGS_DEBUG   = -g3 -Og -DGRID_LOG # -DDEBUG_RUNTIME
 
 CUCOMP       =
 CUFLAGS_PROD =
