initial small configuration tweaks
 o write_library_header.py: Allow "--grid None" to pass, Part 2
 o Use lib$(LIBNAME).a in Makefiles, instead of hardwired libmilhoja.a

--- a/Makefile.base
+++ b/Makefile.base
@@ -113,7 +113,7 @@ test:
 	./$(BINARYNAME)
 
 # If code coverage is being build into the test, remove any previous gcda files to avoid conflict.
-$(BINARYNAME): $(OBJS_TEST) $(OBJS_GEN) $(MAKEFILES) $(LIB_MILHOJA)/lib/libmilhoja.a
+$(BINARYNAME): $(OBJS_TEST) $(OBJS_GEN) $(MAKEFILES) $(LIB_MILHOJA)/lib/lib$(LIBNAME).a
 ifeq ($(CODECOVERAGE), true)
 	$(RM) -f *.gcda
 endif
