less debugging (or logging) output!

--- a/sites/gce/Makefile.site.gnu_mpich
+++ b/sites/gce/Makefile.site.gnu_mpich
@@ -23,7 +23,7 @@ CXXCOMPNAME  = gnu
 CXXCOMP      = mpicxx
 
 CXXFLAGS_PROD    = -O3
-CXXFLAGS_DEBUG   = -g3 -O0 -DGRID_LOG # -DDEBUG_RUNTIME
+CXXFLAGS_DEBUG   = -g3 -O0 -DGRID_LOG -DRUNTIME_PERTILE_LOG # -DDEBUG_RUNTIME
 
 CUCOMP       =
 CUFLAGS_PROD =
