add stuff to support a "fake CUDA" backend, aka "Hostmem"

--- a/Makefile.base
+++ b/Makefile.base
@@ -63,6 +63,10 @@ else
 CU_SRCS   =
 endif
 
+ifeq ($(RUNTIME_BACKEND),HOSTMEM)
+ALTCU_SRCS = $(FAKECU_SRCS_BASE)
+endif
+
 ifeq ($(ENABLE_OPENACC_OFFLOAD),true)
 CXXFLAGS += $(OACC_FLAGS)
 LDFLAGS  += $(OACC_FLAGS)
