Attempt 5000001 at fixing pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -160,7 +160,9 @@ test_gnu:
  - pip install yt
  - cd $MILHOJA_CODE_REPO/tools/sedov_pypkg
  - python setup.py test
- - python setup.py sdist && cd dist
+ - python setup.py sdist
+ - cd dist
+ - ls
  - pip install $(ls Sedov-*.tar.gz)
  - python -c 'import sedov ; sedov.print_versions()'
  - cd $MILHOJA_CODE_REPO/tools/milhoja_pypkg
