Fixed incorrect capital in sedov pypackage name when installing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -160,10 +160,8 @@ test_gnu:
  - pip install yt
  - cd $MILHOJA_CODE_REPO/tools/sedov_pypkg
  - python setup.py test
- - python setup.py sdist
- - cd dist
- - ls
- - pip install $(ls Sedov-*.tar.gz)
+ - python setup.py sdist && cd dist
+ - pip install $(ls sedov-*.tar.gz)
  - python -c 'import sedov ; sedov.print_versions()'
  - cd $MILHOJA_CODE_REPO/tools/milhoja_pypkg
  - python setup.py sdist && cd dist
