--- a/tools/milhoja_pypkg/tox.ini
+++ b/tools/milhoja_pypkg/tox.ini
@@ -22,6 +22,7 @@ setenv =
     DOC_ROOT = docs
 deps =
     --editable=file://{env:CGKIT_PATH}
+    setuptools
     coverage: coverage
 usedevelop =
     coverage: true
@@ -44,6 +45,7 @@ commands =
 description = Run code quality checks
 deps =
     --editable=file://{env:CGKIT_PATH}
+    setuptools
     flake8
 commands =
     python setup.py check --strict --metadata
