--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -120,9 +120,9 @@ test_gnu:
  ##-- Install pristine clone of external test repo
  - pushd $CI_BASE_PATH
  - ls
- - rm -rf Milhoja_[123]D_${HWFAMILY}_*
- - rm -rf $MILHOJA_WORK_CLONE
- - rm -rf $CGKIT_PATH
+ - rm -rfv Milhoja_[123]D_${HWFAMILY}_*
+ - rm -rfv $MILHOJA_WORK_CLONE
+ - rm -rfv $CGKIT_PATH
  - ls
  ##-- Copy cgkit to this space so that it can be installed without needing special
  #    permissions.
