--- a/sites/gce/Makefile.site.gnu_mpich
+++ b/sites/gce/Makefile.site.gnu_mpich
@@ -1,20 +1,25 @@
 # TODO: We need to look up AMReX library by platform (e.g., sandybridge,
 # skylake) as well.
 BASEDIR      = $(MILHOJA_CODE_REPO)
-# Overridden below:
+# Made conditional below:
 #AMREXDIR     = $(MILHOJA_TEST_CLONE)/gce/gnu_current/AMReX_$(NDIM)D
 
 #----------------------------------------------------------------------------
-# Set the AMReX library path -- manual installation for multiple variants
+# Set the AMReX library path -- installation for multiple variants
 #----------------------------------------------------------------------------
-# The env variables FLASHX_AMREXOMPnD_DIR, FLASHX_AMREXnD_DIR have presumably
-# been set by something like ' module load FlashX-TestEnv-gcc':
 ifeq ("$(USEOPENMP)","1")
   AMREX_PATH=${FLASHX_AMREX_OMP${NDIM}D_DIR}
 else
   AMREX_PATH=${FLASHX_AMREX${NDIM}D_DIR}
 endif
-AMREXDIR     = ${AMREX_PATH}
+
+ifneq ($(AMREX_PATH),)
+# The env variables FLASHX_AMREXOMPnD_DIR, FLASHX_AMREXnD_DIR have presumably
+# been set by a command like 'module load FlashX-TestEnv-gcc'. Use if nonempty.
+  AMREXDIR     = ${AMREX_PATH}
+else
+  AMREXDIR     = $(MILHOJA_TEST_CLONE)/gce/gnu_current/AMReX_$(NDIM)D
+endif
 GTESTDIR     = $(MILHOJA_TEST_CLONE)/gce/gnu_current/googletest
 JSONDIR      = $(MILHOJA_TEST_CLONE)/gce/gnu_current/json/single_include
 CUDADIR      =
