--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,7 @@ variables:
  CONDA_ENV_NAME:         "Milhoja_py39"
  CONDA_PYTHON_VERSION:   "3.9"
 
-.test_milhoja_pypkg:
+test_milhoja_pypkg:
  stage: test
  script:
  ##-- Setup all environment variables
@@ -201,14 +201,14 @@ test_gnu:
  - $SEDOV_REGRESSION_TEST $SEDOV_BASELINE_3D $(ls -d SedovCpu_3D_gce_${HWFAMILY}_gnu_mpich_production.*T*)
  - conda deactivate
 
-.test_doxygen:
+test_doxygen:
  stage: test
  script:
  - pushd docs/doxygen
  - doxygen
  - popd
 
-.test_sphinx:
+test_sphinx:
  stage: test
  script:
  ##-- Setup all environment variables
