--- a/tools/milhoja_pypkg/tox.ini
+++ b/tools/milhoja_pypkg/tox.ini
@@ -49,7 +49,7 @@ deps =
     flake8
 commands =
     python setup.py check --strict --metadata
-    flake8
+    flake8 --extend-ignore=E501
 
 [testenv:format]
 # This can alter files, so users should use with care and this should never be
