--- a/Makefile.base
+++ b/Makefile.base
@@ -46,12 +46,12 @@ CUFLAGS_LIB  =
 # Combine all compiler and linker flags
 # TODO: Can we get rid of the AMReX flags when compiling?
 ifeq ($(DEBUG),true)
-CXXFLAGS = -I$(BUILDDIR) -I$(JSONDIR) -I$(LIB_MILHOJA)/include \
+CXXFLAGS = -I$(BUILDDIR) -I$(LIB_MILHOJA)/include \
 			$(CXXFLAGS_STD) $(CXXFLAGS_DEBUG) $(CXXFLAGS_BASE) \
 			$(CXXFLAGS_LIB) $(CXXFLAGS_TEST_DEBUG) \
             $(CXXFLAGS_GENERATED_DEBUG) $(CXXFLAGS_AMREX)
 else
-CXXFLAGS = -I$(BUILDDIR) -I$(JSONDIR) -I$(LIB_MILHOJA)/include \
+CXXFLAGS = -I$(BUILDDIR) -I$(LIB_MILHOJA)/include \
 			$(CXXFLAGS_STD) $(CXXFLAGS_PROD) $(CXXFLAGS_BASE) \
            $(CXXFLAGS_LIB) $(CXXFLAGS_TEST_PROD) \
            $(CXXFLAGS_GENERATED_PROD) $(CXXFLAGS_AMREX)
